src/test/deca/syntax/valid/resultats/test2_empty-lex.res
'{': [@0,239:239='{',<36>,14:0]
'}': [@1,241:241='}',<37>,15:0]
