src/test/deca/syntax/invalid/resultats/test21_return-lex.res
'{': [@0,295:295='{',<36>,14:0]
'return': [@1,298:303='return',<22>,15:1]
';': [@2,305:305=';',<39>,15:8]
'}': [@3,307:307='}',<37>,16:0]
